tests/ui/borrowck/borrowck-use-uninitialized-in-cast.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-use-uninitialized-in-cast.rs:9:13
   |
LL |     let x: &i32;
   |         - binding declared here but left uninitialized
LL |     let y = x as *const i32;
   |             ^ `*x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: &i32 = &42;
   |                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
